--- a/package.json
+++ b/package.json
@@ -14,45 +14,44 @@
   "author": "Abubakr",
   "license": "ISC",
   "engines": {
-    "node": "10.16.0"
+    "node": "16.16.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "axios": "^0.19.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.20.0",
-    "hpp": "^0.2.2",
-    "html-to-text": "^5.1.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.5.1",
+    "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
+    "html-to-text": "^8.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemailer": "^6.3.0",
-    "pug": "^2.0.4",
-    "sharp": "^0.23.0",
-    "slugify": "^1.3.4",
+    "nodemailer": "^6.7.8",
+    "pug": "^3.0.2",
+    "sharp": "^0.30.7",
+    "slugify": "^1.6.5",
     "stripe": "^7.6.0",
     "validator": "^11.1.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2",
-    "parcel-bundler": "1.12.3"
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "nodemon": "^2.0.19",
+    "parcel-bundler": "1.12.3",
+    "prettier": "^2.7.1"
   }
 }
